Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignObjectIntObj.quorum
Integer i
i:SetValue(5)
Object o = cast(Object, i)
Integer a = cast(Integer, o)
output a:GetValue()