Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjInteger.quorum
Integer i = cast(Integer, 5)